--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,6 +41,10 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+.col-md-5 img {
+   width: 100%; 
+}
+
 *,
 *::before,
 *::after {
